# PackratComesHome

./: .gitignore  flake.nix  mypy.ini  populate.py  pyproject.toml  requirements.txt  schema.py  setup.py
packrat_comes_home/: download.py  populate.py  schema.py
src/packrat_comes_home/: cli.py  download.py  log.py  populate.py  schema.py  utils.py
